# decifer

./: .gitignore  LICENSE  MANIFEST.in  README.md  feasibleVAFs.txt  for_machina.txt  max_dcfs.txt  pdfs.txt  setup.py
demos/: demo-A12.sh
scripts/: README.md  best.seg.ucn  cn_states.txt  create_input.ipynb  tumor.mpileup.tsv  tumor.snp  vcf_2_decifer.py
src/decifer/: __init__.py  __main__.py  config.py  coordinate_ascent.py  decifer.py  fileio.py  generator.py  mutation.py  new_coordinate_ascent.py  parse_args.py  process_input.py  progress_bar.py  state_trees.txt
src/decifer/cpp/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  basematrix.cpp  basematrix.h  generatestatetreesmain.cpp  mergestatetreesmain.cpp  readmatrix.cpp  readmatrix.h  solver.cpp  solver.h  stategraph.cpp  stategraph.h  statetree.cpp  statetree.h  utils.cpp  utils.h
test/: decifer_LowQual_output.tsv  decifer_Outliers_output.tsv  decifer_clusterCIs.tsv  decifer_model_selection.tsv  decifer_output.tsv  plot_results.ipynb  test_end2end.py  test_fitbeta.py
test/data/: decifer.output.txt  decifer_Outliers_output.tsv  decifer_betabinom.tsv  decifer_clusterCIs.tsv  decifer_input.tsv  decifer_model_selection.tsv  decifer_output.tsv  fitbeta.best.seg.ucn  generate_true_output.sh  mutations.tsv  purity.tsv  segfile.tsv  snpfile.tsv
test/data/PDAC/: decifer_input.tsv  purity.tsv
